# test

./: API_Documentation.md  CMakeLists.txt  README.md  agent requirment.md  build_gui.bat  build_project.bat  clean_project.bat  run_all_tests.bat  run_gui.bat  开发提示词.md
docs/: GUI_Integration_Guide.md  GUI_User_Guide.md  RealtimeBackup_ThreadSafety_Report.md
src/: CMakeLists.txt
src/compression/: CMakeLists.txt  HuffmanCompression.cpp  HuffmanCompression.h  ICompressionStrategy.h  ZlibCompression.cpp  ZlibCompression.h
src/core/: CMakeLists.txt  FileInfo.cpp  FileInfo.h  FileScanner.cpp  FileScanner.h  MetadataManager.cpp  MetadataManager.h
src/encryption/: CMakeLists.txt  IEncryptionStrategy.h  XOREncryption.cpp  XOREncryption.h
src/engine/: BackupConfig.h  BackupEngine.cpp  BackupEngine.h  BackupTypes.h  CMakeLists.txt  RestoreEngine.cpp  RestoreEngine.h
src/filter/: CMakeLists.txt  FilterChain.cpp  FilterChain.h  IFileFilter.h  NameFilter.cpp  NameFilter.h  PathFilter.cpp  PathFilter.h  SizeFilter.cpp  SizeFilter.h  TimeFilter.cpp  TimeFilter.h  TypeFilter.cpp  TypeFilter.h
src/pack/: CMakeLists.txt  IPackager.h  Packager.cpp  Packager.h
src/realtime/: CMakeLists.txt  IRealtimeBackupMonitor.h  RealtimeBackupMonitor.cpp  RealtimeBackupMonitor.h  RealtimeBackupTypes.h
src/scheduler/: BackupScheduler.cpp  BackupScheduler.h  CMakeLists.txt  IScheduler.h  ScheduleTypes.h
src/ui/: BackupTab.cpp  BackupTab.h  BackupWorker.cpp  BackupWorker.h  CMakeLists.txt  FilterDialog.cpp  FilterDialog.h  MainWindow.cpp  MainWindow.h  RealtimeTab.cpp  RealtimeTab.h  RealtimeWorker.cpp  RealtimeWorker.h  RestoreTab.cpp  RestoreTab.h  RestoreWorker.cpp  RestoreWorker.h  SchedulerTab.cpp  SchedulerTab.h  SchedulerWorker.cpp  SchedulerWorker.h  main.cpp
tests/: CMakeLists.txt  test_backup_engine.cpp  test_backup_scheduler.cpp  test_filescanner.cpp  test_filters.cpp  test_framework_basic.cpp  test_huffman_compression.cpp  test_integration.cpp  test_metadatamanager.cpp  test_packager.cpp  test_real_directory.cpp  test_realtime_backup.cpp  test_xor_encryption.cpp  test_zlib_compression.cpp
